--- a/index.html
+++ b/index.html
@@ -2,4 +2,12 @@
 layout: page
 # Index page
 ---
-> test writing in home
+<section id="index" class="about-section">
+
+<div style="padding: 30px; background: var(--card-bg); border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); max-width: 900px; margin: 0 auto;">
+  <p style="color: var(--text-color); line-height: 1.8; font-size: 1.05rem; margin: 0;">
+    I am a Machine Learning Researcher, currently as a postdoctoral research fellow at Chulalongkorn University, Thailand
+  </p>
+</div>
+
+</section>
