--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 ---
-layout: page
+layout: home
 # Index page
 ---
-I am a Machine Learning Researcher, currently as a postdoctoral research fellow at Chulalongkorn University, Thailand
