--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
-layout: home
+layout: page
 # Index page
 ---
+I am a Machine Learning Researcher, currently as a postdoctoral research fellow at Chulalongkorn University, Thailand
