--- a/index.html
+++ b/index.html
@@ -2,4 +2,34 @@
 layout: page
 # Index page
 ---
-I am a Machine Learning Researcher, currently as a postdoctoral research fellow at Chulalongkorn University, Thailand
+# Hi there 👋, I'm Mahayasa Adiputra
+
+🎯 **About Me**
+- 🔬 Postdoctoral Researcher at Departement of Mathematics and Computer Science, Chulalongkorn University
+- 💡 Research area: bioinformatics, AI in biology and Tabular AI
+- 🚀 Building an AI genomics platform (soon)
+- 💬 Ask me about GANs, synthetic data, imbalanced learning
+
+📫 **Reach Me**
+- 💼 [LinkedIn](https://www.linkedin.com/in/mahayasa-adiputra-b3796423a/)
+- 🧠 [Google Scholar](https://scholar.google.com/citations?user=uFS0JQQAAAAJ&hl=en)
+- 🌐 [Personal Website](mahayasa.github.io)
+
+---
+
+### 🧠 Projects & Publications
+| Project | Description | Affiliation |
+|----------|--------------|------|
+|cancer classification (on going) |Bio-synthetic data generation methods | Chulalongkorn University, Thailand|
+| [CTGAN-ENN](https://link.springer.com/article/10.1186/s40537-024-00982-x) | Hybrid sampling method for churn prediction | Khon Kaen University, Thailand |
+| [Credit Score Classifier](https://www.mdpi.com/2079-9292/14/4/697) | Multi-class GAN oversampling method | Feng Chia University, Taiwan |
+
+---
+
+### 🧰 Tech Stack
+💻 Python | R | SQL  
+🧠 Scikit-learn | TensorFlow  
+📊 Pandas | NumPy | Matplotlib | SHAP  
+⚙️ Docker | Git | Linux  
+
+---
