--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ layout: page
         <li class="mb-2">🔬 Postdoctoral Researcher at Chulalongkorn University</li>
         <li class="mb-2">💡 Research area: Data Synthetic Generation, Tabular AI, Bioinformatics</li>
         <li class="mb-2">🚀 Building an AI genomics platform (soon)</li>
-        <li class="mb-2"></> Working for Machine Learning for industrial and academic field</li>
-        <li class="mb-2"></> also work for web base application technology</li>
+        <li class="mb-2">💼 Working for Machine Learning for industrial and academic field</li>
+        <li class="mb-2">💼 also work for web base application technology</li>
       </ul>
     </div>
   </div>
