--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@ layout: page
         <li class="mb-2">🔬 Postdoctoral Researcher at Chulalongkorn University</li>
         <li class="mb-2">💡 Research area: Data Synthetic Generation, Tabular AI, Bioinformatics</li>
         <li class="mb-2">🚀 Building an AI genomics platform (soon)</li>
-        <li class="mb-2">💼 Working on Machine Learning for industrial and academic field</li>
-        <li class="mb-2">💼 Also work on web base application for every needs</li>
+        <li class="mb-2">💼 Working as AI/ML Specialist and Software Developer</li>
       </ul>
     </div>
   </div>
