--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: page
       <ul class="list-unstyled">
         <li class="mb-2">💼 <a href="https://www.linkedin.com/in/mahayasa-adiputra-b3796423a/" target="_blank" rel="noopener">LinkedIn</a></li>
         <li class="mb-2">🧠 <a href="https://scholar.google.com/citations?user=uFS0JQQAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a></li>
-        <li class="mb-2">🌐 <a href="https://mahayasa.github.io" target="_blank" rel="noopener">Personal Website</a></li>
+        <li class="mb-2">📧 <a href="#" target="_blank" rel="noopener">inyoman.m@chula.ac.th</a></li>
       </ul>
     </div>
   </div>
